Fixed gap

--- a/src/styling.scss
+++ b/src/styling.scss
@@ -425,12 +425,6 @@ body {
               );
               cursor: not-allowed;
             }
-
-            &:not(.selected) {
-              @include safariFriendlyOutlineBorderRadius(
-                      $color: rgba(0, 0, 0, 0)
-              );
-            }
           }
         }
       }
